.kube/ingress-dev.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: dms-ingress
spec:
 rules:
   - host: dev.dms.codenetix.com
     http:
       paths:
         - path: /
           backend:
             serviceName: proxy-app
             servicePort: 80
   - host: dev.docs.dms.codenetix.com
     http:
       paths:
         - path: /
           backend:
             serviceName: proxy-app
             servicePort: 80
   - host: dev.mock.dms.codenetix.com
     http:
       paths:
         - path: /
           backend:
             serviceName: proxy-app
             servicePort: 80
