.kube/ingress-test.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: dms-ingress
spec:
 rules:
   - host: test.dms.codenetix.com
     http:
       paths:
         - path: /
           backend:
             serviceName: proxy-app
             servicePort: 80
   - host: test.docs.dms.codenetix.com
     http:
       paths:
         - path: /
           backend:
             serviceName: proxy-app
             servicePort: 80
   - host: test.mock.dms.codenetix.com
     http:
       paths:
         - path: /
           backend:
             serviceName: proxy-app
             servicePort: 80
